--- a/src/app/pages/list-contacts/list.component.html
+++ b/src/app/pages/list-contacts/list.component.html
@@ -1,24 +1,20 @@
-<div id="accordion" class="contacts-list"> 
-  <div class="card contact" *ngFor="let contact of contacts" attr.id="contact{{contact.id}}">
-    <div class="card-header" >
-      <h5 class="mb-0">
-        <button class="btn btn-link contact-name-link" href="javascript:void(0)" 
-        (click)="details(contact)" data-toggle="collapse" data-target="#collapseOne" 
-        aria-expanded="true" aria-controls="collapseOne">{{contact.name}} </button>
-      </h5>
-    </div>
-
-    <div id="collapseOne" class="collapse show contact-details" *ngIf="contact.details" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-        <app-contact-name [contact]="contact"></app-contact-name>
-        Email -> 
-          &nbsp;<a class="contact-email" href="mailto:{{contact.email}}">{{contact.email}}</a> <br>          
-          <a class="viewBtn" id="contactEditBtn{{contact.id}}" [routerLink]="[ '/view', contact.id ]"> View </a> |
-          <a class="editBtn" id="contactEditBtn{{contact.id}}" [routerLink]="[ '/edit', contact.id ]"> Edit </a> |
-          <a class="removeBtn" id="contactRmBtn{{contact.id}}" href="javascript:void(0)" (click)="remove(contact)">
-            Remove
-          </a>
-      </div>
-    </div>
-  </div>
+<div id="contact-list" class="contacts-list"> 
+  <table class="tabel">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let contact of contacts" attr.id="contact{{contact.id}}">
+        <td><app-contact-name [contact]="contact"></app-contact-name></td>
+        <td>
+            <a class="viewBtn" id="contactEditBtn{{contact.id}}" [routerLink]="[ '/view', contact.id ]"> View </a> |
+            <a class="editBtn" id="contactEditBtn{{contact.id}}" [routerLink]="[ '/edit', contact.id ]"> Edit </a> |
+            <a class="removeBtn" id="contactRmBtn{{contact.id}}" href="javascript:void(0)" (click)="remove(contact)">Remove </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
