--- a/src/app/pages/main-page/app.component.html
+++ b/src/app/pages/main-page/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/" routerLinkActive="active">{{appName}}</a>
-  <a class="nav-item" routerLink="/add" routerLinkActive="active">Add</a> 
+  <a class="btn btn-primary" routerLink="/add" routerLinkActive="active">Add <i class="fas fa-plus"></i></a> 
 </nav>
 <main role="main" class="container" style="margin-top: 75px">
   <router-outlet></router-outlet> 
