added edit btn to view page a

--- a/src/app/pages/view-contact/view.component.html
+++ b/src/app/pages/view-contact/view.component.html
@@ -3,12 +3,11 @@
     <div *ngIf="contact.name!=''; else elseBlock" >
         <h3>{{contact.name}}</h3>
         <ul>
-          <li>Name : {{contact.name}}</li>
-          <li>Email : <a href="mailto:{{contact.email}}">{{contact.email}}</a></li>
-          <li>Address : {{contact.address.street}}, {{contact.address.suite}}, {{contact.address.city}}</li>
-          <li>Zipcode : {{contact.address.zipcode}}</li>
+          <li>Name : <app-contact-name [contact]="contact"></app-contact-name></li>
+          <li>Email:<a href="mailto:{{contact.email}}">{{contact.email}}</a></li> 
           <li>Phone: {{contact.phone}}</li>
-        </ul> 
+        </ul>
+        <a class="btn btn-primary editBtn"  [routerLink]="[ '/edit/', contact.id ]">Edit <i class="fas fa-edit"></i> </a>
     </div>
     <ng-template #elseBlock>No details back to Home page. </ng-template> 
   </div> 
