--- a/src/app/pages/add-contact/add-contact.component.html
+++ b/src/app/pages/add-contact/add-contact.component.html
@@ -11,6 +11,10 @@
           <label for="email">Email address</label>
           <input type="text" class="form-control" [(ngModel)]="contact.email" name="email" aria-describedby="nameHelp" placeholder="Email">
         </div> 
+        <div class="form-group">
+          <label for="email">Phone</label>
+          <input type="text" class="form-control" [(ngModel)]="contact.phone" name="phone" aria-describedby="nameHelp" placeholder="Phone">
+        </div> 
         <button type="submit" class="btn btn-primary">Save</button>
       </form>
     </div> 
