--- a/src/app/pages/edit-contact/edit.component.html
+++ b/src/app/pages/edit-contact/edit.component.html
@@ -5,12 +5,15 @@
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" [(ngModel)]="contact.name" name="name" aria-describedby="nameHelp" placeholder="Enter name">
-        <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
       </div>
       <div class="form-group">
         <label for="email">Email address</label>
         <input type="text" class="form-control" [(ngModel)]="contact.email" name="email" aria-describedby="nameHelp" placeholder="Email">
       </div> 
+      <div class="form-group">
+          <label for="email">Phone</label>
+          <input type="text" class="form-control" [(ngModel)]="contact.phone" name="phone" aria-describedby="nameHelp" placeholder="Phone">
+        </div> 
       <button type="submit" class="btn btn-primary">Save</button>
     </form>
   </div> 
