--- a/src/app/pages/add-contact/add-contact.component.html
+++ b/src/app/pages/add-contact/add-contact.component.html
@@ -12,8 +12,8 @@
           <input type="text" class="form-control" [(ngModel)]="contact.email" name="email" aria-describedby="nameHelp" placeholder="Email">
         </div> 
         <div class="form-group">
-          <label for="email">Phone</label>
-          <input type="text" class="form-control" [(ngModel)]="contact.phone" name="phone" aria-describedby="nameHelp" placeholder="Phone">
+          <label for="Mobile">Phone</label>
+          <input type="text" class="form-control" [(ngModel)]="contact.mobile" name="mobile" aria-describedby="nameHelp" placeholder="Mobile">
         </div> 
         <button type="submit" class="btn btn-primary">Save</button>
       </form>
